[tool.poetry]
name = "blossom-wrapper"
version = "0.1.0"
description = ""
authors = ["Grafeas Group Ltd. <devs@grafeas.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
mypy = ">=0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
