[tool.poetry]
name = "blossom-wrapper"
version = "0.6.0"
description = ""
authors = ["Grafeas Group Ltd. <devs@grafeas.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.0"
urllib3 = "^1.26"

[tool.poetry.dev-dependencies]
black = "^24.3"
mypy = ">=0.800"
types-requests = "^0.1.10"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
